; ModuleID = '/home/carl/AnghaBench/RetroArch/wii/libogc/lwip/core/extr_sys.c_sswt_handler.c'
source_filename = "/home/carl/AnghaBench/RetroArch/wii/libogc/lwip/core/extr_sys.c_sswt_handler.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.sswt_cb = type { i32, i32* }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i8*)* @sswt_handler to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @sswt_handler(i8* %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca %struct.sswt_cb*, align 8
  store i8* %0, i8** %2, align 8
  %4 = load i8*, i8** %2, align 8
  %5 = bitcast i8* %4 to %struct.sswt_cb*
  store %struct.sswt_cb* %5, %struct.sswt_cb** %3, align 8
  %6 = load %struct.sswt_cb*, %struct.sswt_cb** %3, align 8
  %7 = getelementptr inbounds %struct.sswt_cb, %struct.sswt_cb* %6, i32 0, i32 0
  store i32 1, i32* %7, align 8
  %8 = load %struct.sswt_cb*, %struct.sswt_cb** %3, align 8
  %9 = getelementptr inbounds %struct.sswt_cb, %struct.sswt_cb* %8, i32 0, i32 1
  %10 = load i32*, i32** %9, align 8
  %11 = load i32, i32* %10, align 4
  %12 = call i32 @sys_sem_signal(i32 %11)
  ret void
}

declare dso_local i32 @sys_sem_signal(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
